<?xml version="1.0" encoding="UTF-8"?>
<project>
   <modelVersion>4.0.0</modelVersion>
   <groupId>mkr</groupId>
   <artifactId>dump-pom</artifactId>
   <name>mkr dump pom</name>
   <version>1.20230310.1</version>
   <packaging>pom</packaging>

   <modules>
      <module>dump</module>
      <module>dumpsearch</module>
   </modules>

   <scm>
      <developerConnection>scm:git:file:.</developerConnection>
   </scm>

   <build>
      <sourceDirectory>${basedir}/src</sourceDirectory>
      <testSourceDirectory>${basedir}/test</testSourceDirectory>
      <plugins>
         <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
               <encoding>UTF-8</encoding>
               <source>17</source>
               <target>17</target>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <executions>
               <execution>
                  <goals>
                     <goal>jar</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.22.2</version>
            <configuration>
               <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
            </configuration>
         </plugin>
      </plugins>
   </build>

   <dependencies>
      <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>1.7.7</version>
      </dependency>

      <!-- for testing -->
      <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-log4j12</artifactId>
         <version>1.7.7</version>
         <scope>test</scope>
      </dependency>

      <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.5</version>
         <scope>test</scope>
      </dependency>

      <dependency>
         <groupId>org.assertj</groupId>
         <artifactId>assertj-core</artifactId>
         <version>[3.13.2]</version>
         <scope>test</scope>
      </dependency>

   </dependencies>

</project>